# fsgateway

./: .env.example  .gitignore  CURRENT_STATUS.md  GETTING_STARTED.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  SDK_DEVELOPMENT_CHECKLIST.md  SETUP.md  pyproject.toml
.discovery/: README.md
.discovery/scripts/: complete_api_discovery.py  comprehensive_discovery.py  discover_api.py  test_auth.py  test_auth_standalone.py  test_correct_query_endpoint.py
deployment/: ARCHITECTURE.md  DEPLOYMENT.md  README.md  README_DEPLOYMENT.md  SETUP_GUIDE.md  deploy.sh  deploy_to_staging.sh  setup_deployment.sh
docs/: API_DISCOVERY_SUMMARY.md  CURRENT_STATUS.md  FirstShift_Metadata_Query_API_Doc.docx  FirstShift_Metadata_Query_API_Doc.xml  README.md  examples.txt
docs/guides/: CHECKLIST.md  PROJECT_SUMMARY.md
docs/phases/: SDK_DEVELOPMENT_CHECKLIST.md
examples/: basic_usage.py  discovery.py
fsgw/: __init__.py  exceptions.py
fsgw/auth/: __init__.py  client.py  models.py
fsgw/cli/: __init__.py  main.py
fsgw/client/: __init__.py  base.py  client.py  models.py
fsgw/models/: __init__.py  endpoints.py  metadata.py  query.py  responses.py
fsgw/server/: __init__.py  main.py
fsgw/server/static/css/: style.css
fsgw/server/templates/: api_reference.html  base.html  entities.html  entity_detail.html  index.html
tests/: __init__.py  test_client.py  test_models.py
tests/integration/: test_phase2_client.py
